--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,123 @@
+/*
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
+- Spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  min-height: 100vh;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: "League Spartan", sans-serif;
+  padding: 6.4rem 3.2rem;
+  background-color: hsl(0deg, 0%, 100%);
+}
+
+.section {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: 1fr;
+  row-gap: 4.8rem;
+  max-width: 35rem;
+  margin: 0 auto;
+}
+.section .header {
+  text-align: center;
+}
+.section .header__title {
+  margin-bottom: 2.4rem;
+  padding-inline: calc(3.5rem + 2vw);
+  font-size: 3.2rem;
+  font-weight: 700;
+  letter-spacing: -1px;
+  line-height: 0.8;
+  color: hsl(300deg, 43%, 22%);
+}
+.section .header__description {
+  font-size: 1.5rem;
+  line-height: 1.4;
+  color: hsl(330deg, 3%, 45%);
+}
+
+.ratings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.6rem;
+  width: 100%;
+}
+.ratings .rating {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+  padding: 1.2rem 2.4rem;
+  max-width: 35rem;
+  width: 100%;
+  font-size: 1.5rem;
+  background-color: hsl(300deg, 24%, 96%);
+  border-radius: 0.8rem;
+}
+.ratings .rating__icons {
+  color: hsl(29deg, 80%, 61%);
+}
+.ratings .rating__text {
+  font-weight: 700;
+  color: hsl(300deg, 43%, 22%);
+}
+
+.reviews {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  width: 100%;
+}
+.reviews .review {
+  padding: 3.2rem 2.4rem;
+  background-color: hsl(300deg, 43%, 22%);
+  border-radius: 0.8rem;
+}
+.reviews .review__header {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2.4rem;
+}
+.reviews .review__header .img {
+  width: 3.6rem;
+  border-radius: 50%;
+}
+.reviews .review__header .user {
+  font-size: 1.5rem;
+}
+.reviews .review__header .user__name {
+  font-weight: 700;
+  color: hsl(300deg, 24%, 96%);
+}
+.reviews .review__header .user__rank {
+  color: hsl(333deg, 80%, 67%);
+}
+.reviews .review__quote {
+  font-size: 1.5rem;
+  line-height: 1.4;
+  letter-spacing: 0.05rem;
+  color: hsl(300deg, 24%, 96%);
+}
+
+/* MEDIA QUERIES */
 
 /*# sourceMappingURL=main.css.map */
